--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Date: 2022-01-28 10:10:06
  * @LastEditors: jimouspeng
  * @Description: 描述文件内容
- * @LastEditTime: 2022-01-28 10:10:08
+ * @LastEditTime: 2022-01-28 11:19:18
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -14,6 +14,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./src/index.js"></script>
+    <script src="./src/Array.js"></script>
 </body>
 </html>
