--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
  * @Date: 2022-01-28 10:10:06
  * @LastEditors: jimouspeng
  * @Description: 描述文件内容
- * @LastEditTime: 2022-01-28 11:19:18
+ * @LastEditTime: 2022-02-15 10:52:57
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./src/Array.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <script src="./src/dynamic.js"></script>
+        <script src="./src/Array.js"></script>
+        <script src="./src/String.js"></script>
+    </body>
 </html>
