--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Date: 2022-01-28 10:10:06
- * @LastEditors: jimouspeng
+ * @LastEditors: Please set LastEditors
  * @Description: 描述文件内容
- * @LastEditTime: 2022-02-15 10:52:57
+ * @LastEditTime: 2022-02-26 14:02:22
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -14,8 +14,8 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="./src/dynamic.js"></script>
-        <script src="./src/Array.js"></script>
+        <!-- <script src="./src/dynamic.js"></script> -->
+        <!-- <script src="./src/Array.js"></script> -->
         <script src="./src/String.js"></script>
     </body>
 </html>
