--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Date: 2022-01-28 10:10:06
  * @LastEditors: Please set LastEditors
  * @Description: 描述文件内容
- * @LastEditTime: 2022-02-26 14:02:22
+ * @LastEditTime: 2022-03-03 22:17:04
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -14,8 +14,9 @@
         <title>Document</title>
     </head>
     <body>
+        <script src="./src/linked-list.js"></script>
         <!-- <script src="./src/dynamic.js"></script> -->
         <!-- <script src="./src/Array.js"></script> -->
-        <script src="./src/String.js"></script>
+        <!-- <script src="./src/String.js"></script> -->
     </body>
 </html>
