--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Date: 2022-01-28 10:10:06
  * @LastEditors: Please set LastEditors
  * @Description: 描述文件内容
- * @LastEditTime: 2022-07-11 09:58:47
+ * @LastEditTime: 2022-07-11 15:29:37
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -14,10 +14,10 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="./src/sort_search.js"></script>
+        <!-- <script src="./src/sort_search.js"></script> -->
         <!-- <script src="./src/linked-list.js"></script> -->
         <!-- <script src="./src/dynamic.js"></script> -->
         <!-- <script src="./src/Array.js"></script> -->
-        <!-- <script src="./src/String.js"></script> -->
+        <script src="./src/String.js"></script>
     </body>
 </html>
