--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Date: 2022-01-28 10:10:06
  * @LastEditors: Please set LastEditors
  * @Description: 描述文件内容
- * @LastEditTime: 2022-07-11 15:29:37
+ * @LastEditTime: 2022-07-15 17:27:17
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -18,6 +18,8 @@
         <!-- <script src="./src/linked-list.js"></script> -->
         <!-- <script src="./src/dynamic.js"></script> -->
         <!-- <script src="./src/Array.js"></script> -->
-        <script src="./src/String.js"></script>
+        <!-- <script src="./src/String.js"></script> -->
+        <!-- <script src="./src/math.js"></script> -->
+        <script src="./src/other.js"></script>
     </body>
 </html>
