--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Date: 2022-01-28 10:10:06
  * @LastEditors: Please set LastEditors
  * @Description: 描述文件内容
- * @LastEditTime: 2022-07-15 17:27:17
+ * @LastEditTime: 2022-07-21 17:01:53
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -19,7 +19,7 @@
         <!-- <script src="./src/dynamic.js"></script> -->
         <!-- <script src="./src/Array.js"></script> -->
         <!-- <script src="./src/String.js"></script> -->
-        <!-- <script src="./src/math.js"></script> -->
-        <script src="./src/other.js"></script>
+        <script src="./src/math.js"></script>
+        <!-- <script src="./src/other.js"></script> -->
     </body>
 </html>
