--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Date: 2022-01-28 10:10:06
- * @LastEditors: Please set LastEditors
+ * @LastEditors: jimouspeng
  * @Description: 描述文件内容
- * @LastEditTime: 2022-07-26 16:16:16
+ * @LastEditTime: 2022-08-09 23:27:45
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -19,7 +19,8 @@
         <!-- <script src="./src/dynamic.js"></script> -->
         <!-- <script src="./src/Array.js"></script> -->
         <!-- <script src="./src/String.js"></script> -->
-        <script src="./src/math.js"></script>
+        <!-- <script src="./src/math.js"></script> -->
+        <script src="./src/tree.js"></script>
         <!-- <script src="./src/other.js"></script> -->
     </body>
 </html>
