--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Date: 2022-01-28 10:10:06
  * @LastEditors: Please set LastEditors
  * @Description: 描述文件内容
- * @LastEditTime: 2022-10-08 15:48:53
+ * @LastEditTime: 2022-11-15 14:25:48
  * @FilePath: \leetcode\index.html
 -->
 <!DOCTYPE html>
@@ -12,8 +12,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            body {
+                font-size: 50px;
+            }
+            .father-box {
+                background: yellowgreen;
+            }
+            span {
+                display: inline-block;
+                line-height: 0.64rem;
+                font-size: 0.24rem;
+                padding: 0 0.32rem;
+                border-radius: 0.28rem;
+            }
+        </style>
     </head>
     <body>
+        <div class="father-box">
+            <span>span在这里</span>
+        </div>
+
         <!-- <script src="./src/sort_search.js"></script> -->
         <!-- <script src="./src/linked-list.js"></script> -->
         <!-- <script src="./src/dynamic.js"></script> -->
