--- a/show.html
+++ b/show.html
@@ -33,21 +33,64 @@
         <div><span></span></div>
 
         <script>
-            var removeDuplicates = function (nums) {
-                const len = nums.length;
-                let left = 0;
-                let right = 1;
-                while (right <= len - 1) {
-                    while (nums[right] === nums[left]) {
-                        right++;
+            var multiply = function (num1, num2) {
+                if (num1 === '0' || num2 === '0') return '0';
+                let len1 = num1.length,
+                    len2 = num2.length,
+                    res = new Array(len1 + len2).fill(0);
+                // 结果最多为 m + n 位数
+                for (let i = len1 - 1; i >= 0; i--) {
+                    for (let j = len2 - 1; j >= 0; j--) {
+                        // 从个位数开始，逐步相乘
+                        const mul = num1[i] * num2[j];
+                        // 乘积在结果数组中对应的位置
+                        const p1 = i + j,
+                            p2 = i + j + 1;
+                        // 对结果进行累加
+                        const sum = mul + res[p2];
+                        res[p1] += Math.floor(sum / 10);
+                        res[p2] = sum % 10;
                     }
-                    let nextVal = nums[right];
-                    nums[++left] = nextVal;
-                    right++;
                 }
-                return left + 1;
+                if (res[0] === 0) res.shift();
+                return res.join('');
             };
-            console.log(removeDuplicates([-1, 0, 0, 0, 0, 3, 3]));
+            console.log(multiply('123456789', '987654321'));
+            // var maxArea = function (height) {
+            //     // const areaList = []; // 用数组反而浪费空间
+            //     let maxArea = 0;
+            //     const heightLen = height.length;
+            //     let left = 0;
+            //     let right = heightLen - 1;
+            //     while (left < right) {
+            //         let res = (right - left) * Math.min(height[right], height[left]);
+            //         maxArea = Math.max(maxArea, res);
+            //         // left ++;  这里不能直接left++，这样的话，就定死了后侧只能为最后一个元素，可能存在最后一个元素不是最高，所以右侧指针也需要移动。
+            //         // 比如 [2,3,4,5,18,17,6]， 会输出16， 预期结果是17，即[18, 17]这一段为最高, 而不是取[4, ..., 6]这一段(4x4 -> 16)
+            //         if (height[right] < height[left]) {
+            //             right--;
+            //         } else {
+            //             left++;
+            //         }
+            //     }
+            //     return maxArea;
+            // };
+            // console.log(maxArea([1, 2, 1]));
+            // var removeDuplicates = function (nums) {
+            //     const len = nums.length;
+            //     let left = 0;
+            //     let right = 1;
+            //     while (right <= len - 1) {
+            //         while (nums[right] === nums[left]) {
+            //             right++;
+            //         }
+            //         let nextVal = nums[right];
+            //         nums[++left] = nextVal;
+            //         right++;
+            //     }
+            //     return left + 1;
+            // };
+            // console.log(removeDuplicates([-1, 0, 0, 0, 0, 3, 3]));
         </script>
     </body>
 </html>
