--- a/show.html
+++ b/show.html
@@ -45,14 +45,24 @@
             };
             console.log(containsDuplicate([1, 2, 3, 4]));
 
+            // function a() {
+            //     console.log(b);
+            //     var b = 1;
+            // }
+
+            // a();
+
+            // console.log(b);
+
             function a() {
-                console.log(b);
-                var b = 1;
+                for (let i = 3; i >= 0; i--) {
+                    console.log(i, 'kankan');
+                    if (i == 2) {
+                        return 1;
+                    }
+                }
             }
-
-            a();
-
-            console.log(b);
+            console.log(a(), 'excute a');
 
             // var productExceptSelf = function (nums) {
             //     const numsLen = nums.length;
