--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     </head>
     <body>
         <script>
-            var removeElement = function (nums, val) {
-                if (!nums.length) return nums.length
-                let index = 0,
-                    len = nums.length
-                while (index < len) {
-                    if (nums[index] === val) {
-                        nums.splice(index, 1)
-                        len--
+            var mySqrt = function (x) {
+                // 二分查找
+                let left = 0,
+                    right = x,
+                    ans = -1
+                while (left <= right) {
+                    const mid = left + (right - left) / 2
+                    if (mid * mid <= x) {
+                        ans = mid
+                        left = mid + 1
                     } else {
-                        index++
+                        right = mid - 1
                     }
                 }
-                return nums.length
+                return ans
             }
-            removeElement([3, 2, 2, 3], 3)
+            console.log(mySqrt(8))
         </script>
     </body>
 </html>
